--- a/app/javascript/components/ClassGroups/NewClassGroup.css
+++ b/app/javascript/components/ClassGroups/NewClassGroup.css
@@ -1,4 +1,45 @@
-.addUserCard {
-  width: 436px;
-  height: 375px;
+.addClass__backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75)
+}
+
+.addClassCard {
+  position: fixed;
+  top: 30vh;
+  left: 10%;
+  width: 80%;
+  z-index: 100;
+  overflow: hidden;
+}
+
+.addClass__input {
+  margin: 2rem auto;
+  padding: 1rem;
+  width: 90%;
+  max-width: 40rem;
+}
+
+.addClass__input label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+.addClass__input input {
+  font: inherit;
+  display: block;
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 0.15rem;
+  margin-bottom: 0.5rem;
+}
+
+.addClass__input input:focus {
+  outline: none;
+  border-color: #4f005f;
 }
